# textual-examples

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  budget_app.py  build_packages.py  bump_version.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  task_app.py  tui_common.py  tui_screens.py
.github/: README.md
.github/workflows/: build-test.yml  ci.yml  release.yml
src/budget_app/: __init__.py  main.py
src/task_app/: __init__.py  main.py
src/tui_common/: auth.py  crypto.py  data.py  paths.py  screens.py  version.py
tests/: README.md  conftest.py  test_budget_app.py  test_task_app.py  test_tui_common.py
